--- a/app/src/main/res/layout/activity_gallery_slider.xml
+++ b/app/src/main/res/layout/activity_gallery_slider.xml
@@ -6,17 +6,36 @@
     android:layout_height="match_parent"
     tools:context="com.apsent.villapp.GallerySliderActivity">
 
-    <ImageView
-        android:id="@+id/GallerySlider_image"
-        android:layout_width="400dp"
-        android:layout_height="643dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/item_focused" />
+<!--    <ImageView-->
+<!--        android:id="@+id/GallerySlider_image"-->
+<!--        android:layout_width="400dp"-->
+<!--        android:layout_height="643dp"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:layout_marginEnd="6dp"-->
+<!--        android:layout_marginBottom="8dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:srcCompat="@drawable/item_focused" />-->
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/gallerySlider_pager"
+        android:padding="5mm"
+        android:background="@drawable/item_selector"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        tools:ignore="MissingConstraints" />
+
+    <com.viewpagerindicator.CirclePageIndicator
+        android:id="@+id/gallerySlider_indicator"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="bottom"
+        android:padding="10dip"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
