--- a/app/src/main/res/layout/edit_dialog.xml
+++ b/app/src/main/res/layout/edit_dialog.xml
@@ -55,37 +55,37 @@
         android:hint="area"
         android:id="@+id/txt_area_editDlg"/>
 
-    <LinearLayout
-        android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+<!--    <LinearLayout-->
+<!--        android:textAlignment="center"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal">-->
 
 
-        <ImageView
-            android:id="@+id/img_villa_editDlg"
-            android:layout_width="0mm"
-            android:layout_weight="4"
-            android:layout_height="30mm"/>
+<!--        <ImageView-->
+<!--            android:id="@+id/img_villa_editDlg"-->
+<!--            android:layout_width="0mm"-->
+<!--            android:layout_weight="4"-->
+<!--            android:layout_height="30mm"/>-->
 
-        <Button
-            android:id="@+id/btn_upload_editDlg"
-            android:layout_marginRight="5dp"
-            android:background="@color/primaryColor"
-            android:text="Upload"
-            android:layout_weight="1"
-            android:layout_width="0mm"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/btn_camera_editDlg"
-            android:background="@color/pressColor"
-            android:text="Camera"
-            android:layout_weight="1"
-            android:layout_width="0mm"
-            android:layout_height="wrap_content"/>
+<!--        <Button-->
+<!--            android:id="@+id/btn_upload_editDlg"-->
+<!--            android:layout_marginRight="5dp"-->
+<!--            android:background="@color/pressColor"-->
+<!--            android:text="Upload"-->
+<!--            android:layout_weight="1"-->
+<!--            android:layout_width="0mm"-->
+<!--            android:layout_height="wrap_content"/>-->
+<!--        <Button-->
+<!--            android:id="@+id/btn_camera_editDlg"-->
+<!--            android:background="@color/pressColor"-->
+<!--            android:text="Camera"-->
+<!--            android:layout_weight="1"-->
+<!--            android:layout_width="0mm"-->
+<!--            android:layout_height="wrap_content"/>-->
 
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -120,8 +120,7 @@
             android:layout_weight="0.5"
             android:background="#F14A4A"
             android:text="Save"
-            android:id="@+id/btn_update"
-            android:onClick="onClick_btn_update" />
+            android:id="@+id/btn_update"/>
 
 
     </LinearLayout>
