--- a/app/src/main/res/layout/activity_admin_insert.xml
+++ b/app/src/main/res/layout/activity_admin_insert.xml
@@ -8,7 +8,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30mm"
+        android:layout_height="0mm"
+        android:layout_weight="3"
         android:orientation="horizontal">
 
       <ImageView
@@ -19,33 +20,13 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_gravity="center"/>
-<!--        <androidx.viewpager.widget.ViewPager-->
-<!--            android:id="@+id/adminInser_pager"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="232dp"-->
-<!--            android:layout_alignParentTop="true" />-->
 
-<!--        <com.viewpagerindicator.CirclePageIndicator-->
-<!--            android:id="@+id/admin_Insert_indicator"-->
-<!--            android:layout_width="fill_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            android:layout_centerHorizontal="true"-->
-<!--            android:gravity="bottom"-->
-<!--            android:padding="10dip"/>-->
-
-
-        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--            android:id="@+id/fab"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="bottom|end"-->
-<!--            android:src="@drawable/add_selector"/>-->
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="36mm"
+        android:layout_height="0mm"
+        android:layout_weight="4"
         android:orientation="vertical">
 
         <EditText
@@ -102,12 +83,13 @@
         android:layout_width="match_parent"
         android:scrollbars="vertical"
         android:layout_height="0mm"
-        android:layout_weight="5"/>
+        android:layout_weight="3"/>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0mm"
+        android:layout_weight="1">
 
         <Button
             android:onClick="Onclick_BtnCancle"
@@ -132,13 +114,13 @@
             android:layout_weight="0.25"
             android:layout_height="wrap_content" />
 
-        <Button
-            android:layout_marginLeft="20mm"
-            android:id="@+id/btnTakePicture"
-            android:text="دوربین"
-            android:layout_width="0mm"
-            android:layout_weight="0.25"
-            android:layout_height="wrap_content" />
+<!--        <Button-->
+<!--            android:layout_marginLeft="20mm"-->
+<!--            android:id="@+id/btnTakePicture"-->
+<!--            android:text="دوربین"-->
+<!--            android:layout_width="0mm"-->
+<!--            android:layout_weight="0.25"-->
+<!--            android:layout_height="wrap_content" />-->
         <Button
             android:id="@+id/m_uploadBtn"
             android:text="آپلود"
